data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4618.wast
;; 7. **Test Description**: Validate the `br_table` instruction where the table being referenced is empty, ensuring proper trap behavior when no targets are available. This test addresses scenarios with empty tables.    - **Constraint**: The targeted table must have zero entries.    - **Edge Case Relation**: Confirms behavior when accessing an empty table via `call_indirect`.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 0 funcref)
    (func $test (call_indirect (type 0) (i32.const 0)))
  )
  "index out of bounds"
)